# telemetryx

./: .dockerignore  .env.example  .gitignore  README.md
.github/workflows/: cd.yml  ci.yml  test-aws.yml
infra/: docker-compose.prod.yml  docker-compose.yml
infra/docker/: Dockerfile.python  Dockerfile.rust
proto/: analytics.proto  common.proto  events.proto  rules.proto
python/: Makefile  README.md  pyproject.toml
python/scripts/: generate_proto.py
python/telemetryx/: __init__.py
python/telemetryx/core/: __init__.py  config.py  exceptions.py  logging.py
python/telemetryx/db/: __init__.py  postgres.py  redis.py
python/telemetryx/grpc_server/: __init__.py  __main__.py  handlers.py  interceptors.py  server.py
python/telemetryx/ml/: __init__.py
python/telemetryx/proto/: __init__.py  analytics_pb2.py  analytics_pb2_grpc.py  common_pb2.py  rules_pb2.py  rules_pb2_grpc.py
python/telemetryx/rules/: README.md  __init__.py  dsl.py  engine.py  models.py  repository.py
python/tests/: __init__.py  conftest.py  test_config.py  test_db.py  test_dsl.py  test_engine.py  test_handlers.py  test_placeholder.py  test_postgres.py  test_proto.py  test_redis.py  test_repository.py
rust/: Cargo.toml  FEATURES.md  README.md
rust/telemetryx-api/: Cargo.toml
rust/telemetryx-api/src/: main.rs
rust/telemetryx-common/: Cargo.toml
rust/telemetryx-common/src/: adapters.rs  errors.rs  lib.rs  types.rs
rust/telemetryx-ingestion/: Cargo.toml  build.rs
rust/telemetryx-ingestion/src/: main.rs
