[workspace]
resolver = "2"
members = [
    "telemetryx-ingestion",
    "telemetryx-api",
    "telemetryx-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
axum = "0.8"
prost = "0.11"
prost-types = "0.11"
prost-build = "0.11"
tonic = { version = "0.9", features = ["transport"] }
tonic-build = "0.9"
figment = "0.10.19"

