[package]
name = "telemetryx-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "telemetryx-api"
path = "src/main.rs"

[dependencies]
telemetryx-common = { path = "../telemetryx-common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

