[package]
name = "telemetryx-ingestion"
version.workspace = true
edition.workspace = true

[[bin]]
name = "telemetryx-ingestion"
path = "src/main.rs"

[dependencies]
telemetryx-common = { path = "../telemetryx-common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
figment.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
protoc-bin-vendored = "0.11"

